--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "skel-nav-esri",
+  "name": "skel-nav-esri2",
   "version": "0.1.0",
-  "homepage": "https://github.com/cmichaelgraham/skel-nav-esri",
+  "homepage": "https://github.com/cmichaelgraham/skel-nav-esri2",
   "authors": [
     "Mike Graham <mgraham@technicalmedia.com>"
   ],
-  "description": "Aurelia skeleton-navigation with loader and bootstrapper for dojo/esri",
+  "description": "Aurelia skeleton-navigation integrated with dojo/esri",
   "moduleType": [
     "amd"
   ],
@@ -36,21 +36,8 @@
     "aurelia-templating-binding": "aurelia/templating-binding#latest",
     "aurelia-templating-router": "aurelia/templating-router#latest",
     "aurelia-templating-resources": "aurelia/templating-resources#latest",
-    "q": "kriskowal/q#~2.0.2",
-    "bootstrap": "~3.3.1",
-    "fontawesome": "~4.2.0",
-    "aurelia-bootstrapper": "aurelia/bootstrapper#~0.8.0"
-  },
-  "resolutions": {
-    "aurelia-metadata": "0.2.4",
-    "aurelia-binding": "0.2.1",
-    "aurelia-dependency-injection": "0.3.1",
-    "aurelia-loader": "0.3.1",
-    "aurelia-logging": "0.2.1",
-    "aurelia-task-queue": "0.2.1",
-    "aurelia-templating": "0.7.0",
-    "aurelia-history": "0.2.1",
-    "aurelia-route-recognizer": "0.2.1",
-    "aurelia-router": "0.4.2"
+    "aurelia-bootstrapper": "aurelia/bootstrapper#latest",
+    "bootstrap": "~3.3.2",
+    "fontawesome": "~4.3.0"
   }
 }
