--- a/skel-nav-esri2.csproj
+++ b/skel-nav-esri2.csproj
@@ -18,14 +18,34 @@
     <IISExpressUseClassicPipelineMode />
   </PropertyGroup>
   <ItemGroup>
+    <Content Include=".gitignore" />
     <Content Include="app.css" />
     <Content Include="index.html" />
+    <Content Include="views\app.html" />
+    <Content Include="views\child-router.html" />
+    <Content Include="views\esri-map.html" />
+    <Content Include="views\flickr.html" />
+    <Content Include="views\nav-bar.html" />
+    <Content Include="views\welcome.html" />
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="app.ts" />
+    <TypeScriptCompile Include="typings\aurelia-amd\aurelia-amd.d.ts" />
+    <TypeScriptCompile Include="typings\aurelia\aurelia.d.ts" />
+    <TypeScriptCompile Include="typings\core-js\core-js.d.ts" />
+    <TypeScriptCompile Include="typings\dojo\dojo.d.ts" />
+    <TypeScriptCompile Include="typings\es6-promise\es6-promise.d.ts" />
+    <TypeScriptCompile Include="typings\esri\esri.d.ts" />
+    <TypeScriptCompile Include="views\app.ts" />
+    <TypeScriptCompile Include="views\child-router.ts" />
+    <TypeScriptCompile Include="views\esri-map.ts" />
+    <TypeScriptCompile Include="views\flickr.ts" />
+    <TypeScriptCompile Include="views\nav-bar.ts" />
+    <TypeScriptCompile Include="views\welcome.ts" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bower.json" />
+    <Content Include="README.md" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
@@ -62,6 +82,7 @@
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <TypeScriptRemoveComments>false</TypeScriptRemoveComments>
     <TypeScriptSourceMap>true</TypeScriptSourceMap>
+    <TypeScriptModuleKind>amd</TypeScriptModuleKind>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <TypeScriptRemoveComments>true</TypeScriptRemoveComments>
